@@ -3,6 +3,7 @@ Version 17.0 (20??-??-??)
 - Settings application now requires .NET Framework 4 instead of 2 [https://github.com/clechasseur/pathcopycopy/issues/64]
 - Next button during upgrade will correctly read "Install" [https://github.com/clechasseur/pathcopycopy/issues/73]
 - Exporting settings to a path with spaces now works properly [https://github.com/clechasseur/pathcopycopy/issues/68]
+- Copying an Internet Path with spaces now works properly [https://github.com/clechasseur/pathcopycopy/issues/63]
 
 
 Version 16.0.1 (2018-11-30)
